[package]
name = "zoubida"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
tower-http = { version = "0.4.0", features = ["fs"] }
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive", "env"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
